# trasa-coreapi

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  action.yml
.github/workflows/: aws.yml  main.yml
assets/: config.dev.json  config.micro.json  config.prod.json  ecs-task-def.json  poland.json  poland.model
assets/certs/prod.turbotrasa.io/: cert.pem  fullchain.pem  privkey.pem
assets/certs/prv.turbotrasa.io/: cert.pem  fullchain.pem  privkey.pem
assets/certs/pub.turbotrasa.io/: cert.pem  fullchain.pem  privkey.pem
assets/certs/turbotrasa.io/: cert.pem  fullchain.pem  privkey.pem
cmake/: FindLibBsonCXX.cmake  FindLibMongoCXX.cmake  FindLibOSRM.cmake
source/: main.cc
source/account/: model.cc  model.h  store.cc  store.h
source/cache/: cached.h
source/geocoder/: geocoder.cc  geocoder.h
source/geocoder/ner/: geomodel.cc  geomodel.h
source/geocoder/prefix_tree/: prefix_tree.cc  prefix_tree.h  region.cc  region.h  street.cc  street.h
source/geocoder/prefix_tree/trie/: assoc_container.hpp  c++config.h  cpp_type_traits.h  exception.hpp  hash_policy.hpp  list_update_policy.hpp  numeric_traits.h  tag_and_trait.hpp  tree_policy.hpp  trie_policy.hpp  type_traits.h  typelist.h
source/geocoder/prefix_tree/trie/detail/: cond_dealtor.hpp  container_base_dispatch.hpp  standard_policies.hpp  type_utils.hpp  types_traits.hpp
source/geocoder/prefix_tree/trie/detail/bin_search_tree_/: bin_search_tree_.hpp  constructors_destructor_fn_imps.hpp  erase_fn_imps.hpp  insert_fn_imps.hpp  node_iterators.hpp  point_iterators.hpp  r_erase_fn_imps.hpp  rotate_fn_imps.hpp  split_join_fn_imps.hpp  traits.hpp
source/geocoder/prefix_tree/trie/detail/branch_policy/: branch_policy.hpp  null_node_metadata.hpp  traits.hpp
source/geocoder/prefix_tree/trie/detail/eq_fn/: eq_by_less.hpp  hash_eq_fn.hpp
source/geocoder/prefix_tree/trie/detail/hash_fn/: linear_probe_fn_imp.hpp  quadratic_probe_fn_imp.hpp  ranged_hash_fn.hpp  ranged_probe_fn.hpp
source/geocoder/prefix_tree/trie/detail/pat_trie_/: constructors_destructor_fn_imps.hpp  erase_fn_imps.hpp  find_fn_imps.hpp  insert_join_fn_imps.hpp  pat_trie_.hpp  pat_trie_base.hpp  r_erase_fn_imps.hpp  rotate_fn_imps.hpp  split_fn_imps.hpp  synth_access_traits.hpp  traits.hpp
source/geocoder/prefix_tree/trie/detail/resize_policy/: hash_load_check_resize_trigger_imp.hpp  hash_load_check_resize_trigger_size_base.hpp  hash_standard_resize_policy_imp.hpp
source/geocoder/prefix_tree/trie/detail/tree_policy/: node_metadata_selector.hpp
source/geocoder/prefix_tree/trie/detail/trie_policy/: node_metadata_selector.hpp  trie_policy_base.hpp
source/geocoder/sqlite_fts/: sqlite_fts.cc  sqlite_fts.h
source/import/: bundle.h  map_source.cc  map_source.h  osrm_archive.cc  readme.md  region_reader.cc  region_reader.h
source/model/: address.cc  address.h
source/routing/: config.cc  config.h  osrm_interop.cc  osrm_interop.h  scheduler.cc  scheduler.h  trip.cc  trip.h  waypoint.cc  waypoint.h  worker.cc  worker.h
source/rpc/: auth.cc  auth.h  error.cc  error.h  jwt.cc  jwt.h  server.cc  server.h  service.h  web.cc  web.h  websocket.cc  websocket.h
source/services/: accounts.cc  accounts.h  distance.cc  distance.h  geocoder.cc  geocoder.h  trip.cc  trip.h
source/spacial/: coords.cc  coords.h  index.cc  index.h  region.cc  region.h
source/tracking/: event.cc  event.h
source/utils/: aws.cc  aws.h  datetime.cc  datetime.h  future.h  json.h  log.cc  log.h  meta.h  timestampss.cc  timestampss.h
test/: .gitignore  CMakeLists.txt  catch.h  main.cc  mock_data.h  poly_parser.cc  region_index.cc  street_index.cc  world_index.cc
test/data/: podlaskie.poly
tools/: mapdbg.html
tools/addressbook/: CMakeLists.txt  main.cc
tools/geomodel/: CMakeLists.txt  dataset.cc  dataset.h  main.cc  readme.md  train.cc  train.h  transform.cc  transform.h
